# Snake

./: CMakeLists.txt  README.md  body.cpp  game.cpp  game.h  graphics_scene.cpp  graphics_scene.h  main.cpp  main_menu.h  main_menu.ui  mainwindow.cpp  mainwindow.ui  snake.cpp  snake.h
src/client/: CMakeLists.txt  body.h  common.h  eat.cpp  eat.h  game.cpp  game.ui  graphics_scene.h  main_menu.cpp  mainwindow.cpp  mainwindow.h  snake.cpp  snake.h
src/server/: CMakeLists.txt
